# WindowsHandies

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_for_publish.ps1
Audioswitch/: CMakeLists.txt
Audioswitch/source/Audio/: AudioContext.cpp  AudioContext.h  AudioDevice.cpp  AudioDevice.h
Audioswitch/source/Utility/: AssertSuccess.h  ComLibraryContext.h  IPolicyConfigVista.h
Common/: CMakeLists.txt
Common/Common/: AssertSuccess.h
Iconfigure/: CMakeLists.txt
Iconfigure/source/FindDirectories/: FindDirectories.h
Iconfigure/source/FindIconFiles/: FindIconFiles.h  IconFileCriterion.cpp
Iconfigure/source/Utility/: FileHelper.h
KnownFolders/: CMakeLists.txt
KnownFolders/source/: KnownFolder.h  KnownFolderContext.cpp  KnownFolderManagerContext.cpp  KnownFolderManagerContext.h
apps/: CMakeLists.txt
apps/Audioswitch/: CMakeLists.txt  README.md
apps/Audioswitch/data/: IconfigureHardcodes.txt
apps/Audioswitch/resources/: Audioswitch.exe.manifest  resource.h  resource.rc
apps/Audioswitch/source/: AudioContext.cpp  AudioContext.h  Main.cpp  TrayIcon.cpp  TrayIcon.h
apps/Audioswitch/source/Audio/: AudioContext.cpp  AudioDevice.cpp
apps/Common/: CMakeLists.txt  README.md
apps/Common/Common/: ArgumentParser.h  ComLibraryContext.h  Filesystem.h  Registry.cpp  Registry.h  SingleAppInstanceContext.h
apps/Iconfigure/: CMakeLists.txt
apps/Iconfigure/data/: IconfigureHardcodes.txt
apps/Iconfigure/source/: IconEngine.cpp  IconEngine.h  IconFileCriterion.cpp  IconFileCriterion.h  Main.cpp
apps/Iconfigure/source/FindDirectories/: FindDirectories.cpp  FindDirectories.h
apps/Iconfigure/source/FindIconFiles/: FindIconFiles.cpp  FindIconFiles.h  IconFileCriterion.h
apps/Iconfigure/source/Utility/: FileHelper.h  StringHelper.h
apps/KnownFolders/: CMakeLists.txt  README.md
apps/KnownFolders/source/: KnownFolder.cpp  KnownFolderContext.cpp  KnownFolderContext.h  Main.cpp
apps/VeracryptSwitch/: CMakeLists.txt  README.md
apps/VeracryptSwitch/resources/: resource.h
apps/VeracryptSwitch/source/: Main.cpp
resources/: resource.h
source/: Main.cpp
source/FindDirectories/: FindDirectories.cpp  FindDirectories.h
source/FindIconFiles/: FindIconFiles.cpp  FindIconFiles.h  IconFileCriterion.cpp  IconFileCriterion.h
source/Utility/: ArgumentParser.h  StringHelper.h
